--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	</div>
 	<div id="bluelayer">
 		<div id="bluetext">
-		<h1>BOOST UP YOUR LOCAL BUSINESS</h1>
+		<h1>BOST UP YOUR LOCAL BUSINESS</h1>
 		<p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum typesetting</p>
 	</div>
 	<div id="insertdata">
