--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ ustry. Lorem Ipsum has been</p>
 	<img src="images/in.png" alt="linedin">
 </div>
 <div id="footer">
-<p id="so">All contents © copyright 2014 Business Theme. All rights reserved Designed by : akhilwebfolio</p>
+<p id="so">All contents © copyright 2014 Business Theme. All rights reserved Designed by : blabla</p>
 </div>
 </div>
 </body>
